<resources>
    <string name="app_name">Loggo</string>

    <!-- Fragment Titles -->
    <string name="title_library">Library</string>
    <string name="title_search">Search</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_social">Social Media</string>
    <string name="title_category">Category Select</string>
    <string name="title_item">Item Details</string>

    <!-- Backlog Icon Strings -->
    <string name="category_tv">TV Shows</string>
    <string name="category_movie">Movies</string>
    <string name="category_game">Video Games</string>
    <string name="category_book">Books</string>
    <string name="category_class">Classes</string>
    <string name="category_cook">Cooking</string>
    <string name="category_music">Music</string>
    <string name="category_place">Places</string>

    <!-- Example Paragraph text -->
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent hendrerit risus quam, at tempus velit rutrum a. Interdum et malesuada fames ac ante ipsum primis in faucibus. Donec lobortis lorem elit, sed vestibulum arcu ultrices vitae. In leo nibh, mattis ac neque luctus, efficitur vehicula mauris. Pellentesque velit augue, fringilla at nisi quis, sollicitudin imperdiet massa. Nullam in pharetra nisi. Phasellus tristique, erat eget faucibus venenatis, eros tortor iaculis odio, id laoreet felis odio et libero. Phasellus in varius orci, eget scelerisque massa. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Sed ac pulvinar metus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Ut malesuada leo nec tincidunt convallis. Nullam pellentesque tincidunt quam faucibus tincidunt. </string>
</resources>
