<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_category">

    <fragment
        android:id="@+id/navigation_library"
        android:name="com.example.loggo.ui.library.LibraryFragment"
        android:label="@string/title_library"
        tools:layout="@layout/fragment_library" >
        <action
            android:id="@+id/action_navigation_library_to_navigation_item"
            app:destination="@+id/navigation_item" />
    </fragment>

    <fragment
        android:id="@+id/navigation_search"
        android:name="com.example.loggo.ui.search.SearchFragment"
        android:label="@string/title_search"
        tools:layout="@layout/fragment_search" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.loggo.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />

    <fragment
        android:id="@+id/navigation_social"
        android:name="com.example.loggo.ui.social.SocialFragment"
        android:label="@string/title_social"
        tools:layout="@layout/fragment_social" />

    <fragment
        android:id="@+id/navigation_category"
        android:name="com.example.loggo.ui.category.CategoryFragment"
        android:label="@string/title_category"
        tools:layout="@layout/fragment_category" >
        <action
            android:id="@+id/action_navigation_category_to_navigation_library"
            app:destination="@id/navigation_library" />
    </fragment>

    <fragment
        android:id="@+id/navigation_item"
        android:name="com.example.loggo.ui.demo.DemoFragment"
        android:label="@string/title_item"
        tools:layout="@layout/fragment_item" />
</navigation>